# AIOS-IO-Global

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pulsenet_peers.json  pyproject.toml  scheduler_state.json
Machine Learning Logic/: MAP.MD  README.md  advanced_consciousness_orchestrator.py  advanced_cuda_kernels.py  ae_chat_session_20250611_234202.json  ae_chatbot_benchmark_20250611_233218.json  ae_dataset.py  ae_distributed.py  ae_file_scanner.py  ae_llm_complete_system.py  ae_path_manager.py  ae_production_client.py  ae_production_enhanced.py  ae_production_startup.py  ae_scan_results.json  ae_working_chatbot.py  capsule_ae_enhanced.py  ci_automation_pipeline.py  consciousness_compression_engine.py  consciousness_state_synchronizer.py  dataset_ingestion_layer.py  desktop_tray_application.py  distributed_consciousness.py  global_consciousness_orchestrator.py  hardware_optimization.py  ic_ae_mathematical_foundation.py  integration_test_system.py  policy_security_systems.py  practical_ae_integration_demo.py  production_demo_fixed.py  realtime_system_integration_hub.py  robust_edge_case_tests.py  self_modifying_consciousness_kernel.py  test_ae_fixed.py  test_ae_integration.py  train_clean.py  unified_framework_master.py  unified_integration_test.py
Math_explaining_the_universe/: 01_Fundamental_Unity_Equations.md  04_Quantum_Precision_Mathematics.md  07_Artificial_Intelligence_Computational.md  11_Temporal_Dynamics_Time_Mathematics.md  12_Emotional_Psychological_Mathematics.md  17_Environmental_Ecological_System_Mathematics.md  9pixel chat.txt  AE_Math.md  (+25 more)
(+145 files in other folders)
